# nethelt

./: .gitignore  Makefile  README.md  pom.xml
.github/workflows/: checkstyle.yml  ng-linter.yml  run-java-tests.yml
ai-model/: .gitignore  Dockerfile  README.md  pyproject.toml
ai-model/research/: README.md  main.py
ai-model/research/ping/: aggregate_windows.py  config.yaml  generate_raw.py
ai-model/src/ai_model/: __main__.py  main.py  model.py
ai-model/src/ai_model/analysis/: score_analysis.py
ai-model/src/ai_model/inference/ping/: predict.py
ai-model/src/ai_model/training/ping/: train.py
backend/: pom.xml
core/: pom.xml
coverage-aggregator/: pom.xml
desktop-client/: README.md  pom.xml
desktop-client/agent/: pom.xml
desktop-client/agent/background/: pom.xml
desktop-client/agent/common/: pom.xml
desktop-client/bg-client/: pom.xml
desktop-client/client-common/: pom.xml
desktop-client/gui-client/: pom.xml
desktop-client/network/: pom.xml
docs/latex-thesis/: .gitignore  ai-model.tex  api.tex  bibliography.tex  introduction.tex  praca_dyplomowa.tex  project-assumptions.tex  technical-docs.tex  thesis.tex
frontend/: Dockerfile  README.md  angular.json  eslint.config.js  package-lock.json  package.json
frontend/src/: index.html  styles.scss
infrastructure/: .env.example  README.md  docker-compose.yml
infrastructure/docker/: compose.yml
nethelt-client/: pom.xml
nethelt-client/agent/: pom.xml
nethelt-client/network/: pom.xml
nethelt-core/: pom.xml
nethelt-web-backend/: pom.xml
web-api/: Dockerfile  README.md  pom.xml
(+597 files in other folders)
