[tool.poetry]
name = "ai-model"
version = "0.1.0"
description = "Ai model for Nethelt application. This module can detect network anomalies."
authors = ["Sebastian Górski <sebastiangorski00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = ">=2.3.3,<3.0.0"
scikit-learn = ">=1.7.2,<2.0.0"
matplotlib = ">=3.10.7,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
requests = ">=2.32.5,<3.0.0"

[[tool.poetry.packages]]
include = "ai_model"
from = "src"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
